# network-monitor

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  sniffnet_rebuild_prd.md
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/src/: App.tsx  CapturePanel.tsx  ConnectionsTable.tsx  Dashboard.tsx  ExportButtons.tsx  InterfaceList.tsx  SettingsPanel.tsx  SignalsPanel.tsx  TrafficHealthStrip.tsx  api.ts  styles.css  trafficFilters.ts  types.ts  useFlowSnapshot.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  persist.rs  snapshotter.rs  state.rs
crates/capture_core/: Cargo.toml
crates/capture_core/examples/: capture.rs  list.rs
crates/capture_core/src/: capture.rs  direction.rs  lib.rs  parse.rs
crates/enrichment/: Cargo.toml
crates/enrichment/src/: geoip.rs  lib.rs  rdns.rs
crates/flow_engine/: Cargo.toml
crates/flow_engine/examples/: aggregate.rs
crates/flow_engine/src/: anomaly.rs  key.rs  lib.rs  summary.rs
crates/shared_types/: Cargo.toml
crates/shared_types/src/: lib.rs
docs/: setup.md
