[package]
name = "network-monitor-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Personal-use network traffic monitor desktop app"

[lib]
name = "network_monitor_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

shared_types = { workspace = true }
capture_core = { workspace = true }
flow_engine = { workspace = true }
enrichment = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
